# fastapi_sqlmodel_sqlite_boilerplate

./: .gitignore  README.md  pyproject.toml
app/: database.py  main.py  schema.py
app/db/: test.db
