[tool.poetry]
name = "fastapi-sqlmodel-sqlite-boilerplate"
version = "0.1.0"
description = ""
authors = ["Daniel Suen <ttdsuen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
sqlmodel = "^0.0.12"
aiosqlite = "^0.19.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"
pytest = "^7.4.3"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
